hopefully fixed the footer on mobile

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@
 .container {
     background-color: black;
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 100%;
     grid-template-rows: auto auto auto auto;
     grid-template-areas:
         "header"
